# Reference: https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "refscan"
version = "0.1.0"
description = "Scans a MongoDB database for referential integrity issues"
authors = []
readme = "README.md"
repository = "https://github.com/eecavanna/refscan"
homepage = "https://github.com/eecavanna/refscan"
documentation = "https://github.com/eecavanna/refscan"
keywords = ["mongodb", "mongo", "relationships", "reference", "database", "data", "referential integrity", "scan"]

[tool.poetry.dependencies]
python = "^3.10"
# We use `pymongo` to communicate with MongoDB servers.
# Docs: (https://pymongo.readthedocs.io/en/stable/
pymongo = "^4.7.1"
# We use `rich` to format console output.
# Docs: https://rich.readthedocs.io/en/stable/index.html
rich = "^13.7.1"
# We use `typer` as a CLI framework.
# Docs: https://typer.tiangolo.com/
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.scripts]
# Reference: https://python-poetry.org/docs/pyproject#scripts
refscan = "refscan.refscan:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
